<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.first.FirstFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFilter"
        style="@style/FloatingButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/filter"
        app:srcCompat="@drawable/ic_filter"
        android:layout_margin="15dp"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gpFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tilName, rgState, btFilter"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_margin="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fabFilter"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tilName">

        <RadioButton
            android:id="@+id/rbAlive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_alive"/>

        <RadioButton
            android:id="@+id/rbDead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dead"/>

        <RadioButton
            android:id="@+id/rbUnknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_unknown"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/rgState"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/filter"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/btFilter"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>